Commit 12. fix problems

--- a/exercise-9/src/test/resources/application.yml
+++ b/exercise-9/src/test/resources/application.yml
@@ -11,13 +11,7 @@ spring:
     allow-circular-references: true
   jpa:
     generate-ddl: false
-    #generate-ddl: true
     hibernate:
       ddl-auto: none
-      #ddl-auto: create-drop
+    show-sql: true
 
-    #show-sql: true
-
-logging:
-  level:
-    ROOT: ERROR
