--- a/exercise-11/src/test/resources/application.yml
+++ b/exercise-11/src/test/resources/application.yml
@@ -1,22 +1,15 @@
 spring:
-
   datasource:
     url: jdbc:h2:mem:testdb
-
   sql:
     init:
       mode: always
-
+  shell:
+    interactive:
+      enabled: false
   main:
     allow-circular-references: true
-
   jpa:
     generate-ddl: false
     hibernate:
       ddl-auto: none
-    open-in-view: false
-    show-sql: true
-
-logging:
-  level:
-    ROOT: ERROR
