--- a/exercise-11/src/test/resources/application.yml
+++ b/exercise-11/src/test/resources/application.yml
@@ -4,16 +4,12 @@ spring:
   sql:
     init:
       mode: always
+  shell:
+    interactive:
+      enabled: false
   main:
-    allow-bean-definition-overriding: true
     allow-circular-references: true
   jpa:
     generate-ddl: false
     hibernate:
       ddl-auto: none
-    open-in-view: false
-
-    show-sql: true
-logging:
-  level:
-    ROOT: ERROR
