--- a/exercise-9/src/test/resources/application.yml
+++ b/exercise-9/src/test/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   sql:
     init:
       mode: always
+      data-locations: data.sql
   shell:
     interactive:
       enabled: false
@@ -14,4 +15,3 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
-
