Commit 12. add corrections

--- a/exercise-11/src/main/resources/application.yml
+++ b/exercise-11/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     init:
       mode: always
   main:
-    allow-bean-definition-overriding: true
+#    allow-bean-definition-overriding: true
     allow-circular-references: true
   jpa:
     generate-ddl: false
