--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>exercise-7</module>
 		<module>exercise-9</module>
         <module>exercise-11</module>
+        <module>exercise-13</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
