Commit 3. add configurations

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>exercise-7</module>
 		<module>exercise-9</module>
 		<module>exercise-11</module>
+		<module>exercise-13</module>
 		<module>exercise-30-spring-boot-actuator</module>
 	</modules>
 
