Commit 2. add configurations

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>exercise-9</module>
 		<module>exercise-11</module>
 		<module>exercise-13</module>
+		<module>exercise-16</module>
 		<module>exercise-30-spring-boot-actuator</module>
 	</modules>
 
