--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 		<module>exercise-9</module>
         <module>exercise-11</module>
         <module>exercise-13</module>
-    </modules>
+		<module>exercise-16</module>
+	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
