--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>exercise-11</module>
         <module>exercise-13</module>
 		<module>exercise-16</module>
+		<module>exercise-17/backend</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
