Commit 1. BACKEND add config

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>exercise-11</module>
 		<module>exercise-13</module>
 		<module>exercise-16</module>
+		<module>exercise-17/backend</module>
 		<module>exercise-30-spring-boot-actuator</module>
 	</modules>
 
