Commit 16. fix problems 3

--- a/exercise-13/src/test/resources/application.yml
+++ b/exercise-13/src/test/resources/application.yml
@@ -12,13 +12,13 @@ spring:
     mongodb:
       port: 0
       database: test
+      # alternative
       #uri: mongodb://localhost
       #port: 27017
       #database: library
 
-
 mongock:
-#  runner-type: "ApplicationRunner" #default (conflict with Spring Shell)
+# runner-type: "ApplicationRunner" #default (conflict with Spring Shell)
   runner-type: "InitializingBean"
   change-logs-scan-package:
     - com.oshovskii.mongock.changelogs
