--- a/exercise-13/src/main/resources/application.yml
+++ b/exercise-13/src/main/resources/application.yml
@@ -1,20 +1,14 @@
 spring:
   data:
     mongodb:
-#      uri: localhost
       host: localhost
       port: 27017
       database: library
-
-  #      host: localhost
-#      embedded:
-#        version: 2.6.10
   main:
-#    allow-bean-definition-overriding: true
     allow-circular-references: true
 
 mongock:
-  #runner-type: "ApplicationRunner" # default
+# runner-type: "ApplicationRunner" # default (conflict with Spring Shell)
   runner-type: "InitializingBean"
   change-logs-scan-package:
     - com.oshovskii.otus.changelogs
