--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>exercise-3</module>
         <module>exercise-5</module>
         <module>exercise-7</module>
+		<module>exercise-25-spring-acl</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
