--- a/exercise-25-spring-acl/pom.xml
+++ b/exercise-25-spring-acl/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <artifactId>otus</artifactId>
+        <groupId>com.oshovskii</groupId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.oshovskii</groupId>
-    <artifactId>exercise-25-backend</artifactId>
+    <artifactId>exercise-25-spring-acl</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -78,7 +78,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
-            <scope>provided</scope>
         </dependency>
 
         <!-- ModelMapper -->
@@ -118,6 +117,13 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <!-- Validation -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
         </dependency>
 
     </dependencies>
