--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <module>exercise-3</module>
         <module>exercise-5</module>
         <module>exercise-7</module>
-		<module>exercise-9</module>
+		<module>exercise-23-security</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
