--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,23 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+
     <modules>
         <module>exercise-1</module>
 		<module>exercise-2</module>
         <module>exercise-3</module>
         <module>exercise-5</module>
         <module>exercise-7</module>
-		<module>exercise-9</module>
+		<module>exercise-30-spring-boot-actuator</module>
 	</modules>
+
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+
 	<groupId>com.oshovskii</groupId>
 	<artifactId>otus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -25,6 +28,5 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-
 
 </project>
