--- a/exercise-11/src/main/resources/application.yml
+++ b/exercise-11/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
       ddl-auto: none
     open-in-view: false
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
