--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
         <module>exercise-3</module>
         <module>exercise-5</module>
         <module>exercise-7</module>
+		<module>exercise-26-spring-batch</module>
 		<module>exercise-30-spring-boot-actuator</module>
-	</modules>
+    </modules>
 
     <parent>
 		<groupId>org.springframework.boot</groupId>
