Refactoring: small changes

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+
     <modules>
         <module>exercise-1</module>
 		<module>exercise-2</module>
@@ -14,12 +15,14 @@
         <module>exercise-13</module>
 		<module>exercise-16</module>
 	</modules>
+
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+
 	<groupId>com.oshovskii</groupId>
 	<artifactId>otus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -28,4 +31,5 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
 </project>
