--- a/exercise-25-spring-acl/src/main/resources/application.yml
+++ b/exercise-25-spring-acl/src/main/resources/application.yml
@@ -1,10 +1,18 @@
 application:
   title: SPRING-SECURITY-ACL
-
 spring:
+  #The way to resolve this issue (Swagger not working) is by adding pathmatcher in application. properties
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
   h2:
     console:
       enabled: true
+
   jpa:
     hibernate:
       ddl-auto: none
+
+server:
+  port: 9898
