--- a/exercise-25-spring-acl/src/main/resources/application.yml
+++ b/exercise-25-spring-acl/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 application:
   title: SPRING-SECURITY-ACL
+
+server:
+  port: 9898
+
 spring:
   #The way to resolve this issue (Swagger not working) is by adding pathmatcher in application. properties
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
 
   h2:
     console:
@@ -13,6 +23,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 
-server:
-  port: 9898
+
